replace globalKeyManager with keygen that saves to and checks localStorage

--- a/test/offer.html
+++ b/test/offer.html
@@ -1,5 +1,12 @@
 <html>
 <script src="offercomp.js"></script>
+<script>
+console.log(localStorage['certificate'])
+console.log(localStorage['publicKey'])
+
+
+console.log(window.f1, window.f2)
+</script>
 <body>
 </body>
 
