--- a/test/offer.html
+++ b/test/offer.html
@@ -7,6 +7,8 @@ console.log(localStorage['publicKey'])
 
 console.log(window.f1, window.f2)
 </script>
+
+<input id="image-file" type="file" onchange="ndn.io.publishFile(new ndn.Name('ndnx/mime/' + this.files[0].type + '/' + this.files[0].name), this.files[0])"/>
 <body>
 </body>
 
